	0900 Work on non-gpu compatibility.
	1000 add xnorm in addition to wnorm and gnorm
	1000 ai-mtg: Being able to access arrays with original variable names.
	1000 ai-mtg: Copy instruction for going back two time steps.
	1000 ai-mtg: kernels and perceptrons.
	1000 consider moving from y=f(x) to f(x,y) for the knet language.
	1000 cusparse.jl: check efficiency of resizecopy for different array types.
	1000 examples/adding.jl: check out unstability of 400. share results with authors.
	1000 examples/mnist4d.jl: test with dropout
	1000 examples/mnistpixels.jl: gcheck gives terrible results, check.
	1000 examples/mnistsparse.jl: gcheck does not work?
	1000 examples/rnnlm.jl: did not get good results on the large experiment, debug.
	1000 examples: consolidate example options in one file.  fix train and predict.  turn libsvm2sparse into a data generator.
	1000 examples: reimplement predict, train, and tutorial.jl.
	1000 find the three parameter element wise mul in julia and rename mul2
	1000 get rid of input() and use constructor arguments instead?	can we?
	1000 gradcheck for sequences does not work: it has to go through a whole sequence, implement as option or separately.
	1000 handout-mtg Replace 0's with ? or _ in dimensions.
	1000 implement maxnorm activation function.
	1000 initforw/forw: write in-place transpose for dy or decide on extra space for ops that need temp space (use tmp?).
	1000 initforw: type/size inference in inputless networks?
	1000 kperceptron.jl: reimplement within the new framework.
	1000 linalg.jl: A_mul_B!{T}(C::CudaMatrix{T}, A::CudaMatrix{T}, B::CudaSparseMatrixCSC{T}) allocates.
	1000 linalg.jl: axpy!{T}(a,x::CudaSparseMatrixCSR{T},y::CudaSparseMatrixCSR{T}) should check sparseness pattern.
	1000 minibatch resizing
	1000 model.jl: add predict, load, save
	1000 nvidia bug check: actf.jl: cudnnSoftmaxBackward off by a factor of 2? came back saying there is no bug.  also report the cusparse transpose problem.